<resources>
    <string name="app_name">SP Suite</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="current_working_on">You\'re currently working on</string>
    <string name="total_today">Total Today</string>
    <string name="leave_balance">Leave Balance</string>
    <string name="days">days</string>
    <string name="sp_coins_earned">SP coins earned</string>
    <string name="coins">coins</string>
    <string name="this_month">This Month</string>
    <string name="this_week">This Week</string>
    <string name="nxt_24_header">Your NEXT24 Tasks</string>
    <string name="company_events_this_month">Company Events this Month</string>
    <string name="employee_events_this_month">Employee Events Today</string>
    <string name="to">to</string>
    <string name="start_date">Start date</string>
    <string name="id_no">ID No</string>
    <string name="tin_no">Tin no</string>
    <string name="sss_no">SSS No</string>
    <string name="account_type">sp_suite</string>
    <string name="emergency_label">Person to notify in case of emergency</string>
    <string name="avatar">Avatar</string>
    <string name="login_label">Let the productivity begin!</string>
    <string name="logout">Logout</string>
    <string name="suite">Suite</string>
    <string name="requests">Requests</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="call">Call</string>
</resources>
